2004-07-23  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b9

        * Fix: Skins will be ignored when embedded.  This was causing a lot
          of display issues for users due to skin colors conflicting with
          embedding-system colors.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b8

	* Fix?: Revert an earlier checkin (b100?) that prevented a PHP notice
	  when first loading sessions while embedded.  Some users report not
	  getting a session at all in postnuke.  Since postnuke was the original
	  problem, I'm confused, but this will work.  Supressing the notice using
	  @session_start()

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b7

	* Change: Remove the != SUNOS line from lib/lang.php
	  We're under the assumption that it was added based on a bogus
	  bug report some time ago because all docs (and user reports)
	  claim that the LANG= line is necessary.

2004-07-22  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b6

        * Change: Better handling of the onsubmit/double-clicking issue
          utilizing an 'action' input which is changed depending on
          which button was clicked.

2004-07-21  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b5

	* Fix: Cancel did not work in create user.

	* Fix: Default language was not used for new users.

	* Change: Added $ Id $

	* Change: Modified HowTo and Changelog a very little.

	* Change: Added little description to block-random.php

2004-07-20  Pierre-Luc Paour  <paour@users.sourceforge.net> 1.4.4-RC3-cvs-b4

	* Fix: phpBB2 integration for the upload applet now works.

2004-07-20  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC3-cvs-b3

        * Change: Check for fitToWindow before outputting the 'onclick'
          attribute in view_photo.

2004-07-20  Jens A. Tkotz <jens@peino.de>  1.4.4-RC3-cvs-b2

	* Fix: Adapted contrib/phpBB2/modules.php to fit with phpBB2 2.0.9/10
	       and Register Globals ON.
