@@ -32,10 +32,10 @@ if (!$gallery->user->isAdmin() || $gallery->app->multiple_create != "yes") {
 	exit;	
 }
 
-doctype();
 $errorCount=0;
 if (isset($create))
 {
+	doctype();
 	?>
 <html>
 <head>
@@ -121,7 +121,9 @@ if (isset($create))
 
 } else if (isset($cancel) || isset($dismiss)) {
 	header("Location: " . makeGalleryHeaderUrl("manage_users.php"));
-} 
+} else {
+	doctype();
+}
 ?>
 
 <html>
